--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="header-logo">
             <a class="site-logo" href="index.html">
                 <!-- <img src="images/logo.svg" alt="Homepage"> -->
-                <h1 class="logo">Empire Tech ink.</h1>
+                <h1 class="logo">Empire Tech inс.</h1>
             </a>
         </div> <!-- end header-logo -->
 
